--- a/main.Rmd
+++ b/main.Rmd
@@ -8,6 +8,7 @@ library(ggplot2)
 library(gridExtra)
 library(dplyr)
 library(reshape2)
+library(Ternary)
 source("functions.R")
 source("binary_sampler.R")
 source("plot_functions.R")
@@ -54,7 +55,7 @@ nrow(counts[counts$rowSums.variants_binary.>1,])
 
 ### K = 6
 ```{r}
-niter <- 100
+niter <- 500
 res <- gibbs(variants_binary, K=6, R=ncol(variants_binary), niter=niter)
 # visualize gibbs trajectory for effect frequencies
 plot(res$P[1,1,],type="l", ylim=c(0,1))
@@ -62,6 +63,12 @@ for (i in 1:6) {
   for (j in 1:35) {
     lines(res$P[i,j,],col=i+j)
   }
+}
+```
+```{r}
+plot(res$pi[,1],type="l", ylim=c(0,1))
+for (i in 2:6) {
+  lines(res$pi[,i],col=i)
 }
 ```
 
@@ -74,26 +81,64 @@ assignments <- get_cluster_assignments(variants_binary, res, niter=niter)
 
 ```{r}
 # stacked barplot of assignment probabilities (see plots folder for full plot)
+# structure_plot(assignments) # takes a moment to run
 structure_plot(assignments, n=100)
 ```
 
 ```{r}
 # proportion of variants in each cluster for each trait
 df$assignment <- sapply(df$ID, function(x) {assignments[assignments$ID==x, ]$assignment})
-t <- table(df$Trait, df$assignment)
+df$Trait_combined <- paste0(df$Trait, " (", df$`Trait category`, ")")
+t <- table(df$Trait_combined, df$assignment)
 # doesn't seem to nec match pre-defined categories but looks like it makes biological sense...
-round(table(df$Trait, df$assignment)/rowSums(t), 2)
+t_prop <- round(table(df$Trait, df$assignment)/rowSums(t), 2)
+t_prop <- as.data.frame.matrix(t_prop)
+t_prop
+```
+
+```{r}
+par(mar = rep(0, 4))
+# select ternary plots
+data_points <- split(t_prop[,c(1,3,5)], seq(nrow(t_prop)))
+names(data_points) <- rownames(t_prop)
+data_points <- lapply(data_points, as.numeric)
+data_points <- data_points[c(3,4,5,8,9,10,17,18,19,20,21,22,23,25,32,33)]
+# png("plots/ternary135.png") 
+TernaryPlot(atip="1", btip="3", ctip="5", 
+            alab="prop variant assigned to 1", blab="prop variant assigned to 2", clab="prop variant assigned to 3",
+            bg = vapply(data_points, 
+                         function (x) rgb(x[1], x[2], x[3], 0.5,
+                                          maxColorValue = 1),
+                         character(1))
+            )
+AddToTernary(points, data_points, pch = 21, cex = 0.1)
+AddToTernary(text, data_points, names(data_points), cex = 0.7, font = 2, col ="blue", srt=30)
+# dev.off()
+
+# ternary plot abstraction TO DO:
+# iterate through traits, take >0.1 cluster prob and put onto triangle
+# maybe use ggtern to plot and make sure labels dont overlap
 ```
 
 ### K = 3
 ```{r}
-res3 <- gibbs(variants_binary, K=3, R=ncol(variants_binary), niter=100)
-assignments3 <- get_cluster_assignments(x=variants_binary, res=res3, niter=100)
-structure_plot(assignments3, n=100)
+niter3 <- 500
+res3 <- gibbs(variants_binary, K=3, R=ncol(variants_binary), niter=niter3)
+assignments3 <- get_cluster_assignments(x=variants_binary, res=res3, niter=niter3)
+```
+```{r}
+structure_plot(assignments3)
 # examine by trait
 df$assignment3 <- sapply(df$ID, function(x) {assignments3[assignments3$ID==x, ]$assignment})
 t3 <- table(df$Trait, df$assignment3)
 round(table(df$Trait, df$assignment3)/rowSums(t3), 2)
+```
+
+
+
+### Find posterior for K
+```{r}
+
 ```
 
 
