--- a/main.Rmd
+++ b/main.Rmd
@@ -76,7 +76,7 @@ P_mean <- apply(Y, c(1, 2), mean, na.rm = TRUE)
 
 
 ```{r}
-table(res$z[niter,])/nrow(variants_binary)
+pi_mean
 # df cols: ID, assignment, P(1), P(2), P(3), P(4), P(5), P(6)
 assignments <- get_cluster_assignments(data=df, x=variants_binary, res=res, niter=niter)
 ```
