--- a/main.Rmd
+++ b/main.Rmd
@@ -125,6 +125,7 @@ AddToTernary(text, data_points, names(data_points), cex = 0.7, font = 2, col ="b
 # ternary plot abstraction TO DO:
 # iterate through traits, take >0.1 cluster prob and put onto triangle
 # maybe use ggtern to plot and make sure labels dont overlap
+
 ```
 
 ### K = 3
@@ -147,9 +148,8 @@ round(table(df$Trait, df$assignment3)/rowSums(t3), 2)
 # refer to appendix of structure paper, not sure this is right
 posterior_K_raw(variants_binary, assignments, P_mean, 0.1)
 
-K_posteriors <- matrix(,ncol=10,nrow=2)
-for 
-
+K_mat <- K_inference(variants_binary, 10)
+K_mat
 ```
 
 
