--- a/main.Rmd
+++ b/main.Rmd
@@ -105,27 +105,13 @@ t_prop
 
 ```{r}
 par(mar = rep(0, 4))
-# select ternary plots
-data_points <- split(t_prop[,c(1,3,5)], seq(nrow(t_prop)))
-names(data_points) <- rownames(t_prop)
-data_points <- lapply(data_points, as.numeric)
-data_points <- data_points[c(3,4,5,8,9,10,17,18,19,20,21,22,23,25,32,33)]
-# png("plots/ternary135.png") 
-TernaryPlot(atip="1", btip="3", ctip="5", 
-            alab="prop variant assigned to 1", blab="prop variant assigned to 2", clab="prop variant assigned to 3",
-            bg = vapply(data_points, 
-                         function (x) rgb(x[1], x[2], x[3], 0.5,
-                                          maxColorValue = 1),
-                         character(1))
-            )
-AddToTernary(points, data_points, pch = 21, cex = 0.1)
-AddToTernary(text, data_points, names(data_points), cex = 0.7, font = 2, col ="blue", srt=30)
-# dev.off()
+
 
 # ternary plot abstraction TO DO:
 # iterate through traits, take >0.1 cluster prob and put onto triangle
 # maybe use ggtern to plot and make sure labels dont overlap
 
+plot_triangles(t_prop)
 ```
 
 ### K = 3
