--- a/main.Rmd
+++ b/main.Rmd
@@ -54,6 +54,7 @@ nrow(counts[counts$rowSums.variants_binary.>1,])
 # key of trait to pre-defined category
 category_key <- df %>% distinct(Trait, .keep_all = TRUE) %>% select(Trait, `Trait category`)
 category_key <- category_key[order(category_key$Trait),]
+category_key$Trait_short <- c("alt", "alb", "akp", "apA", "apB", "ast", "astalt", "crp", "cal", "chol", "crea", "creaU", "cysC", "dbili", "eGFR", "ggt", "glu", "HbA1c", "HDL", "IGF1", "LDL", "LpA", "malbU", "nalb", "phos", "potU", "SHBG", "sodU", "test", "tbili", "tprot", "trig", "urate", "urea", "vitD")
 ```
 
 # Binary sample
@@ -104,13 +105,12 @@ t <- table(df$Trait_combined, df$assignment)
 # doesn't seem to nec match pre-defined categories but looks like it makes biological sense...
 t_prop <- table(df$Trait, df$assignment)/rowSums(t)
 t_prop <- as.data.frame.matrix(t_prop)
-rownames(t_prop) <- c("alt", "alb", "akp", "apA", "apB", "ast", "astalt", "crp", "cal", "chol", "crea", "creaU", "cysC", "dbili", "eGFR", "ggt", "glu", "HbA1c", "HDL", "IGF1", "LDL", "LpA", "malbU", "nalb", "phos", "potU", "SHBG", "sodU", "test", "tbili", "tprot", "trig", "urate", "urea", "vitD")
-category_key$Trait_short <- c("alt", "alb", "akp", "apA", "apB", "ast", "astalt", "crp", "cal", "chol", "crea", "creaU", "cysC", "dbili", "eGFR", "ggt", "glu", "HbA1c", "HDL", "IGF1", "LDL", "LpA", "malbU", "nalb", "phos", "potU", "SHBG", "sodU", "test", "tbili", "tprot", "trig", "urate", "urea", "vitD")
+rownames(t_prop) <- category_key$Trait_short
+
 t_prop
 ```
 
 ```{r}
-
 # ternary plot abstraction TO DO:
 # iterate through traits, take >0.1 cluster prob and put onto triangle
 # maybe use ggtern to plot and make sure labels dont overlap
@@ -122,14 +122,64 @@ plot_triangles(t_prop, n_top=4, category_key=category_key)
 niter3 <- 500
 res3 <- gibbs(variants_binary, K=3, R=ncol(variants_binary), niter=niter3)
 assignments3 <- get_cluster_assignments(x=variants_binary, res=res3, niter=niter3)
+stacked_barplot(assignments3, do_save=T, fname="binary_stacked_by_assignment_k=3.png", orderby="assignment") # takes a moment to run
 ```
 ```{r}
-stacked_barplot(assignments3)
+# stacked_barplot(assignments3)
 # examine by trait
 df$assignment3 <- sapply(df$ID, function(x) {assignments3[assignments3$ID==x, ]$assignment})
 t3 <- table(df$Trait, df$assignment3)
 round(table(df$Trait, df$assignment3)/rowSums(t3), 2)
 ```
+
+### K = 4
+```{r}
+niter4 <- 500
+res4 <- gibbs(variants_binary, K=4, R=ncol(variants_binary), niter=niter4)
+assignments4 <- get_cluster_assignments(x=variants_binary, res=res4, niter=niter4)
+# stacked_barplot(assignments4, do_save=T, fname="binary_stacked_by_assignment_k=4.png", orderby="assignment") # takes a moment to run
+```
+
+```{r}
+df$assignment4 <- sapply(df$ID, function(x) {assignments4[assignments4$ID==x, ]$assignment})
+t_prop4 <- table(df$Trait, df$assignment4)/rowSums(table(df$Trait, df$assignment4))
+t_prop4 <- as.data.frame.matrix(t_prop4)
+rownames(t_prop4) <- category_key$Trait_short
+plot_triangles(t_prop4, n_top=4, category_key=category_key)
+```
+
+### K = 5
+```{r}
+niter5 <- 500
+res5 <- gibbs(variants_binary, K=5, R=ncol(variants_binary), niter=niter5)
+assignments5 <- get_cluster_assignments(x=variants_binary, res=res5, niter=niter5)
+stacked_barplot(assignments5, do_save=T, fname="binary_stacked_by_assignment_k=5.png", orderby="assignment") # takes a moment to run
+```
+
+```{r}
+df$assignment5 <- sapply(df$ID, function(x) {assignments5[assignments5$ID==x, ]$assignment})
+t_prop5 <- table(df$Trait, df$assignment5)/rowSums(table(df$Trait, df$assignment5))
+t_prop5 <- as.data.frame.matrix(t_prop5)
+rownames(t_prop5) <- category_key$Trait_short
+p_list <- plot_triangles(t_prop5, n_top=4, category_key=category_key)
+```
+
+### K = 7
+```{r}
+niter5 <- 500
+res5 <- gibbs(variants_binary, K=5, R=ncol(variants_binary), niter=niter5)
+assignments5 <- get_cluster_assignments(x=variants_binary, res=res5, niter=niter5)
+stacked_barplot(assignments5, do_save=T, fname="binary_stacked_by_assignment_k=5.png", orderby="assignment") # takes a moment to run
+```
+
+```{r}
+df$assignment5 <- sapply(df$ID, function(x) {assignments5[assignments5$ID==x, ]$assignment})
+t_prop5 <- table(df$Trait, df$assignment5)/rowSums(table(df$Trait, df$assignment5))
+t_prop5 <- as.data.frame.matrix(t_prop5)
+rownames(t_prop5) <- category_key$Trait_short
+plot_triangles(t_prop5, n_top=4, category_key=category_key)
+```
+
 
 
 ### Find posterior for K
