--- a/mvn.Rmd
+++ b/mvn.Rmd
@@ -45,10 +45,8 @@ assignments <- get_cluster_assignments(data=df, x=data_mat, res=res, K = 5, nite
 ```{r}
 # idk why the axis labels aren't showing up
 stacked_barplot(assignments, orderby="assignment", K = 5, binary = F, do_save = F)
-#stacked_barplot(assignments, orderby="position", K = 3, binary = F, do_save = T)
+#stacked_barplot(assignments, orderby="position", K = 5, binary = F, do_save = T)
 ```
-
-
 
 
 ## 2D Projection
@@ -71,13 +69,13 @@ t_prop <- as.data.frame.matrix(t_prop)
 rownames(t_prop) <- c("alt", "alb", "akp", "apA", "apB", "ast", "astalt", "crp", "cal", "chol", "crea", "creaU", "cysC", "dbili", "eGFR", "ggt", "glu", "HbA1c", "HDL", "IGF1", "LDL", "LpA", "malbU", "nalb", "phos", "potU", "SHBG", "sodU", "test", "tbili", "tprot", "trig", "urate", "urea", "vitD")
 t_prop <- cbind(Trait_cat, tibble::rownames_to_column(t_prop, "Trait"))
 
+t_prop
+
 t_prop %>% 
-    ggplot(aes(`5`, `4`)) +
+    ggplot(aes(`1`, `2`)) +
     geom_label(aes(label = Trait, fill = Trait_cat)) +
     theme_bw()
 ```
-
-
 
 
 ## Triangle Plots
@@ -93,8 +91,8 @@ t_prop <- round(table(sig$Trait, sig$assignment)/rowSums(t), 2)
 t_prop <- as.data.frame.matrix(t_prop)
 rownames(t_prop) <- c("alt", "alb", "akp", "apA", "apB", "ast", "astalt", "crp", "cal", "chol", "crea", "creaU", "cysC", "dbili", "eGFR", "ggt", "glu", "HbA1c", "HDL", "IGF1", "LDL", "LpA", "malbU", "nalb", "phos", "potU", "SHBG", "sodU", "test", "tbili", "tprot", "trig", "urate", "urea", "vitD")
 
-plot_list <- plot_triangles(t_prop, n_top = 5, category_key = category_key)
-plot_list[[10]]
+plot_list <- plot_triangles(t_prop, n_top = 3, category_key = category_key)
+plot_list
 #ggsave("./plots/normal-triangle-k=3.png", width = 6, height = 4)
 ```
 
